# University

./: README.md
C++/A/: AskisiA.doc  askisia.cpp
C++/B/: AskisiB.doc  askisib.cpp
C++/C/: AskisiC.doc  askisic.cpp
C++/D/: AskisiD.doc  askisid.cpp
C++/E/: AskisiE.doc  askisie.cpp
C++/F/: AskisiF.doc  askisif.cpp
C++/G/: AskisiG.doc  askisig.cpp
C++/H/: AskisiH.doc  askisih.cpp
Computer Graphics/Part 1/: Painter.m  TriPaint.m  colordemo.m
Computer Graphics/Part 2/: axistrans.m  demo2a.m  demo2b.m  pointtrans.m  rotmat.m  stanford_bunny.plg.txt  vectrans.m
Computer Graphics/Part 3/: GouraudPhoto.m  TriPaint.m  VertNormals.m  ambientLight.m  demo3.m  diffuseLight.m  projCamera.m  projCameraKu.m  specularLight.m  systemtrans.m  vase2016.mat
Computer Networks 1/: virtualModem.java
Computer Networks 2/: serverThread.java
Data Structures/src/: MinMaxPlayer.java  Node80127706.java  SecondPlayer.java
Databases/: 1.Create_Users.sql  2.Noisy_Parrot.sql  3.Create_Views.sql  4.Trigger.sql  5.User_Permissions.sql
Databases/Queries/: Query_No1.sql  Query_No10.sql  Query_No2.sql  Query_No3.sql  Query_No4.sql  Query_No5.sql  Query_No6.sql  (+4 more)
Microwaves/: array.m  ex1.m  ex2.m  ex3.m  filtere.m  function_f.m  me.m  reff3.m  solve2d.m  threedotonec.m
Operating Systems/: makefile  myshell.c
Tracking/: CMakeCache.txt  CMakeLists.txt  Commands  DetectTracking.cpp  DetectTrackingdemonstration.cpp  Makefile  README  README.md  cmake_install.cmake  recordTracking.mkv
Tracking/older versions/: ViBe_8UC3 (copy).cpp  ViBe_8UC3demo.cpp  cudaMorphology.cpp
(+84 files in other folders)
